added view.paths to the package

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,3 +7,6 @@ export(basiSet.MAG)
 export(generalized.covariance)
 export(perm.generalized.covariance)
 export(pwSEM)
+export(view.paths)
+importFrom(graphics,par)
+importFrom(stats,predict)
