Date 19 July 2024.  First commit since I reinstalled my computer

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,8 +19,9 @@ Imports:
 Suggests:
     knitr,
     rmarkdown,
-    testthat
+    testthat (>= 3.0.0)
 Depends: 
     R (>= 2.10)
 LazyData: true
 VignetteBuilder: knitr
+Config/testthat/edition: 3
