--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,11 +2,11 @@
 
 S3method(pairs,without.edge.in.pwSEM)
 S3method(summary,pwSEM.class)
-S3method(update,fun)
 export(basiSet.MAG)
 export(generalized.covariance)
 export(perm.generalized.covariance)
 export(pwSEM)
+export(update.fun)
 export(view.paths)
 importFrom(graphics,par)
 importFrom(stats,predict)
