everything seems to work, test() doesn't return any errors, but check() returns an error.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 S3method(pairs,without.edge.in.pwSEM)
 S3method(summary,pwSEM.class)
+S3method(update,fun)
 export(basiSet.MAG)
 export(generalized.covariance)
 export(perm.generalized.covariance)
