Added MCX2 function to package and updated documentation.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,10 +5,18 @@ S3method(summary,pwSEM.class)
 S3method(update,fun)
 export(DAG.to.MAG.in.pwSEM)
 export(MAG.to.DAG.in.pwSEM)
+export(MCX2)
 export(basiSet.MAG)
 export(generalized.covariance)
 export(perm.generalized.covariance)
 export(pwSEM)
 export(view.paths)
+importFrom(graphics,hist)
+importFrom(graphics,legend)
+importFrom(graphics,lines)
 importFrom(graphics,par)
+importFrom(stats,dchisq)
+importFrom(stats,pchisq)
 importFrom(stats,predict)
+importFrom(stats,rnorm)
+importFrom(stats,var)
