This version returns no errors, warnings or notes when using check()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,9 @@ export(perm.generalized.covariance)
 export(pwSEM)
 export(update.fun)
 export(view.paths)
+import(copula)
+importFrom(copula,fitCopula)
+importFrom(copula,normalCopula)
 importFrom(graphics,hist)
 importFrom(graphics,legend)
 importFrom(graphics,lines)
