--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,12 @@
 Package: pwSEM
 Title: Piecewise structural equation modelling
-Version: 0.0.0.9000
+Version: 1.0.0
 Authors@R: 
     person("Bill", "Shipley", , "Bill.Shipley@USherbrooke.ca", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0002-7026-3880"))
-Description: Conducts a dsep test of a directed, or mixed, acyclic graph without latent variables
+Description: Conducts a dsep test of a directed, or mixed, acyclic graph 
+    without latent variables (but possibly with implicitly marginalized or
+    conditioned latent variables that create dependent errors)
        based on linear, generalized linear, or additive models
        with or without a nesting structure for the data.
 License: MIT + file LICENSE
